--- a/mta.yaml
+++ b/mta.yaml
@@ -7,24 +7,32 @@ modules:
     path: web
     requires:
       - name: Toyota_Test-uaa
-
   - name: core_db
     type: hdb
     path: core_db
     requires:
-     - name: hdi_core_db
-
+      - name: hdi_core_db
+        properties:
+          TARGET_CONTAINER: '~{hdi-container-name}'
+      - name: CrossSchemaService
+        properties:
+          key: hdi-sflight-service
+          value: '~{sflight-service-name}'
 resources:
   - name: Toyota_Test-uaa
     type: com.sap.xs.uaa-space
     parameters:
       config_path: ./xs-security.json
-
   - name: hdi_core_db
     parameters:
-       config:
-          schema: Toyota
+      config:
+        schema: Toyota
     properties:
-       hdi-container-name: ${service-name}
+      hdi-container-name: '${service-name}'
     type: com.sap.xs.hdi-container
-
+  - name: CrossSchemaService
+    type: org.cloudfoundry.existing-service
+    parameters:
+      service-name: CROSS_SCHEMA_SFLIGHT
+    properties:
+      sflight-service-name: '${service-name}'
